2005-08-10 Francois Proulx <francois.proulx@gmail.com>
	* More GIS stuff
	
2005-08-10 Francois Proulx <francois.proulx@gmail.com>
	* Added Geocoders
		* /classes/AbstractGeocoder.php
		* /classes/Geocoders/GeocoderCanada.php
		* /classes/Geocoders/GeocoderUsa.php
	* This will be used for enterring GIS data
	* Coming in the next few days : set hotspot gis using Google Maps + Geocoding
		
2005-01-25 Pascal Leclerc  <pascal@plec.ca>
	* Fix hardcoded images path in classes/MainUI.php

2005-07-25 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bug in hotspot_status , added htmlspecialchars();
	* This solved the bug where ampersands would break the XML
	
2005-07-17 Francois Proulx <francois.proulx@gmail.com>
	* Fixed bugs in gen.sh, compile.sh locale scripts
	
2005-07-12 Francois Proulx <francois.proulx@gmail.com>
	* Changed XML element from hotspotsMetadata to hotspots and added networkUri element to networkMetadata
	
2005-07-12 Francois Proulx <francois.proulx@gmail.com>
	* Fixed XML protocol for exchanging hotspots status.
		* Should now be considered stable (stamped v1.0)
	* Fixed hotspots status map to reflect the changes
	* Added french translations
	
2005-07-11 Francois Proulx <francois.proulx@gmail.com>
	* Changed link to hotspots map using NON ssl because Google Keys are sensitive to the whole path.
	
2005-07-11 Benoit Grégoire  <bock@step.polymtl.ca>
	* classes/RssPressReview.php: Begin rewrite. 
	* classes/MainUI.php: Add addFooterScript() function.
	* venues_map.php:  Workaround the IE DOM problem. 

2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Changed wording in hotspots status page added legend
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Minor adjustements to icon positionning
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Changed google maps marker icons
	
2005-07-05 Francois Proulx <francois.proulx@gmail.com>
	* Added missing elements in XML exchange format