@@ -81,21 +81,20 @@ class MainUI
     			$html .= "<li><a href='user_stats.php'>"._("Cumulative user statistics")."</a></li>\n";
     			$html .= "<li><a href='hotspot_log.php'>"._("Hotspot logs")."</a></li>\n";
     			$html .= "<li><a href='import_user_database.php'>"._("Import NoCat user database")."</a></li>\n";
-    			$html .= "<li><a href='hotspot.php'>"._("Hotspot creation and configuration")."</a> - Beta</li>\n";
-    			$html .= "<li><a href='owner_sendfiles.php'>"._("Hotspot owner administration")."</a> - Beta</li>\n";
+    			$html .= "<li><a href='content_admin.php'>"._("Content manager")."</a></li>\n";
             }
+            
+            $html .= "</ul>\n";
 
 			// If the user is super admin OR owner of at least one hotspot show the menu
 			if($current_user && ($current_user->isSuperAdmin() || $current_user->isOwner()))
 			{
 				/* Node admin */
 				$html .= "<div class='admin_section_container'>\n";
-				$html .= '<form action="'.GENERIC_OBJECT_ADMIN_ABS_HREF.'" method="get">';
+				$html .= '<form action="'.GENERIC_OBJECT_ADMIN_ABS_HREF.'" method="post">';
 				$html .= "<div class='admin_section_title'>"._("Node administration:")." </div>\n";
 	
 				$html .= "<div class='admin_section_data'>\n";
-				$html .= "<input type='hidden' name='action' value='edit'>\n";
-				$html .= "<input type='hidden' name='object_class' value='Node'><br>\n";
 
 				if ($current_user->isSuperAdmin())
 					$sql_additional_where = '';
@@ -107,7 +106,9 @@ class MainUI
 				$html .= "</div>\n";
 				$html .= "<div class='admin_section_tools'>\n";
 	
-				$html .= "<input type=submit name='edit_submit' value='"._("Edit")."'>\n";
+				$html .= "<input type='hidden' name='object_class' value='Node'>\n";
+				$html .= "<input type='hidden' name='action' value='edit'>\n";
+				$html .= "<input type='submit' name='edit_submit' value='"._("Edit")."'>\n";
 				
 				$html .= "</div>\n";
 				$html .= '</form>';
@@ -133,10 +134,6 @@ class MainUI
     			$html .= '</form>';
     			$html .= "</div>\n";
             }
-
-			$html .= "<li><a href='content_admin.php'>"._("Content manager")."</a></li>\n";
-			$html .= "</ul>\n";
-
 		}
 		else
 		{
